no need to build custom docker images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3'
 services:
 
   lb:
-    build:
-      context: lb
-    image: lb:latest
+    image: nginx:latest
     ports:
       - 80:80
+    volumes:
+      - ./lb/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       default:
         aliases:
           - lb.local
 
   apache:
-    build:
-      context: apache
-    image: apache:latest
+    image: httpd:latest
+    volumes:
+      - ./apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
     networks:
       default:
         aliases:
