--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,11 +1,5 @@
-ServerName apache.local
-
-ErrorLog /proc/self/fd/2
-LogLevel warn
-
-Listen 80
-
 LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule log_config_module modules/mod_log_config.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 LoadModule remoteip_module modules/mod_remoteip.so
@@ -15,6 +9,14 @@ LoadModule unixd_module modules/mod_unixd.so
     User daemon
     Group daemon
 </IfModule>
+
+ServerName apache.local
+Listen 80
+
+LogFormat "%a %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" combined
+CustomLog "| /usr/bin/logger --udp --server logstash.local --port 5000" combined
+ErrorLog "| /usr/bin/logger --udp --server logstash.local --port 5001"
+LogLevel warn
 
 # interpret X-Real-IP header contents as real IP address of client
 # use RemoteIPTrustedProxy instead if you want to pass only public IP addresses
