--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,31 @@ services:
       default:
         aliases:
           - redis.local
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:6.2.3
+    volumes:
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./logstash/pipeline/:/usr/share/logstash/pipeline/
+    networks:
+      default:
+        aliases:
+          - logstash.local
+
+  es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.3
+    networks:
+      default:
+        aliases:
+          - es.local
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.2.3
+    networks:
+      default:
+        aliases:
+          - kibana.local
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_URL: http://es.local:9200
