--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,9 @@ services:
       - 5601:5601
     environment:
       ELASTICSEARCH_URL: http://es.local:9200
+
+  jenkins:
+    build:
+      context: jenkins
+    ports:
+      - 8080:8080
